# b3sh

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
include/b3sh/: handler.h
include/b3sh/commands/: cd.h  export.h  pwd.h
include/b3sh/handlers/: app.h  base.h  builtin.h  pipe.h
include/b3sh/terminal/: completion.h  input.h
include/b3sh/utils/: fs.h  helper.h
src/: handler.cpp  main.cpp
src/commands/: cd.cpp  export.cpp  pwd.cpp
src/handlers/: app.cpp  base.cpp  builtin.cpp  pipe.cpp
src/terminal/: completion.cpp  input.cpp
src/utils/: fs.cpp  helper.cpp
